# snippits

clojure/deploy/: .gitignore  project.clj
clojure/deploy/src/deploy/: core.clj
clojure/deploy/tmp/: session.clj
incanter/: gettingstarted.txt
napkin/: c.rb
net/: proxy.rb
net/data/: google.com
net/lib/proxy/: header.rb
net/tests/: test_header.rb
pcl/1/: hello.lisp
pcl/3/: simple-db.lisp
pcl/5/: fun.lisp  fun.lisp~
pcl/8/: primes.lisp
pe/: common.ss  lgenum.py  lgstpfactory.py  nthprime.py  p12-triangle.ss  p13-sum-big-num.ss  prime.py
py/algo/: sorting.py  sqrt.py
py/pe/: et.php  et.py  evenly.py  gridsum.py  lgstpfactory.py  nthprime.py  out  out.fail  out.fail2  palendrome.py  pythag.py
scheme/: 1.3.sc
scheme/ls/: atom.sc
scheme/misc/: commandline.ss
scheme/sicp/: 1.3.sc  1.7.sc
sicp/lisp/: 1.10.lisp  1.7.lisp
sicp/scheme/: 1.11.sc  1.16.sc  1.2.scm  1.7.1.sc
sysadmin/monit/: diskmon.sh
tmux/: .tmux.conf  tpopp-tmux-init.sh
tpop/: .gitignore  Makefile.in  README  config.h.in  configure  configure.ac
tpop/clojure/: README.compile  anagrams.clj  complile-clj.sh  mclj  run  run-compiled.sh
tpop/java/: Markov.java
tpop/racket/: search.ss  searchtest.ss  tree.scm
tpop/src/: Makefile.am  Makefile.in  bsearch.c  dictnodelist.c  dictnodelist.h  hash.c  hash.h  heaplib.c  heaplib.h  quicksort.c  quicksort.h  searchlib.c  searchlib.h  strings.c  test_dictnodelist.c  test_hash.c  test_heap.c  test_quicksort.c  test_search.c  test_strings.c  test_util.c  test_vtree.c  tpop.h  util.c  util.h  vtree.c  vtree.h
vim/: slime.vim
(+3 files in other folders)
