bin_PROGRAMS = bsearch test_search test_quicksort test_dictnodelist test_vtree test_hash

bsearch_SOURCES = bsearch.c searchlib.c 
test_search_SOURCES = test_search.c searchlib.c

test_quicksort_SOURCES = test_quicksort.c quicksort.c
test_quicksort_LDFLAGS = -lc

test_dictnodelist_SOURCES = test_dictnodelist.c dictnodelist.c

test_vtree_SOURCES = test_vtree.c vtree.c
test_vtree_LDFLAGS = -lc

test_hash_SOURCES = test_hash.c hash.c dictnodelist.c searchlib.c
test_hash_LDFLAGS = -lc
